	* matlab/test/test_smdscale.m (0.3.2)
	* matlab/PointsToolbox/scimat_dmatrix_thickslice.m (0.1.4)
	* matlab/PointsToolbox/scinrrd_pca.m (0.1.1)
	* matlab/PointsToolbox/scimat_simlandmarks_thickslice.m (0.1.1)
	* matlab/PointsToolbox/pts_mesh.m (0.2.1)
	* matlab/PointsToolbox/scinrrd_surface_interpolation.m (0.7.1)
	* matlab/PointsToolbox/bwmesh.m (0.1.7)

	- Gerardus functions used by this function have been renamed.

	- Update deprecated syntax for narginchk, nargoutchk when
	required.

	- Minor style updates to help header, e.g. stop at the end of
	summary, function name in lowercase, no space before/after
	bracket.

	* Delete
	matlab/FiltersToolbox/scinrrd_optimal_intersecting_plane_old.m.

2014-06-10  Ramon Casero  <rcasero@gmail.com>

	* matlab/FileFormatToolbox/scinrrd_im2nrrd.m (0.2.0)
	* matlab/FileFormatToolbox/scinrrd_world2index.m (0.3.0)

	- Pablo Lamata contribution.

	- Update narginchk/nargoutchk syntax where appropriate.

2014-06-07  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/CardiacToolbox/correct_blockface_perspective.m (0.1.0)

	- CORRECT_BLOCKFACE_PERSPECTIVE Transform Bewster angle blockface
	image onto 90º projection.

2014-06-05  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/CardiacToolbox/equalise_blockface_illumination.m
	(0.1.0)
	* Add matlab/test/R_55_0001.bmp
	* Add matlab/test/polymask.mat
	* Add matlab/test/ellipmask.mat

	-EQUALISE_BLOCKFACE_ILLUMINATION Correct illumination
	inhomogeneities in blockface photography.

2014-05-29  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/tri_sphparam.m: (0.3.2)

	- Fix bug. No need to check topology if we know that SMACOF could
	not find a valid solution.

2014-05-28  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/cons_smacof_pip.m: (0.4.1)

	- Fix bug. If the user provides a problem with no free vertices
	(i.e. there's nothing to optimise), make the function exit
	gracefully instead of with an error.

2014-05-26  Ramon Casero  <rcasero@gmail.com>
